# Raytracer

./: CMakeLists.txt  README.md  main.cpp
BRDFs/: BRDF.hpp  GlossySpecular.cpp  GlossySpecular.hpp  Lambertian.cpp  Lambertian.hpp  PerfectSpecular.cpp  PerfectSpecular.hpp
Cameras/: Camera.cpp  Camera.hpp
Lights/: Ambient.cpp  AmbientOcclusion.cpp  Area.cpp  Directional.cpp  Light.cpp  Light.hpp  Lights.hpp  PointLight.cpp
Materials/: GlossyReflective.cpp  Material.cpp  Material.hpp  Materials.hpp  Matte.cpp  Plastic.cpp  Reflective.cpp
Multithreading/: Controller.cpp  JobThread.cpp  Multithreading.hpp
Samplers/: Jittered.cpp  Regular.cpp  Sampler.cpp  Sampler.hpp  Samplers.hpp
Shapes/: BBox.cpp  Box.cpp  Geometries.hpp  Mesh.cpp  Plane.cpp  Shape.cpp  Shape.hpp  Sphere.cpp  Triangle.cpp
Utilities/: Utilities.hpp
